feat: home page boilerplate, basic markdown blog boilerplate

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -63,7 +63,8 @@
         "usernamehw.errorlens",
         "wayou.vscode-todo-highlight",
         "visualstudioexptteam.vscodeintellicode",
-        "styled-components.vscode-styled-components"
+        "styled-components.vscode-styled-components",
+        "google.geminicodeassist"
       ]
     }
   },
